Turn on auto-complete. Choose dates the KDE way. (By stealing a widget from kfind.) Add descriptions to the add bias buttons.

BUG: 106726

svn path=/trunk/extragear/multimedia/amarok/; revision=843337